--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,10 +145,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file('mykey.keystore')
+            storePassword 'mikasa'
+            keyAlias 'mykeyalias'
+            keyPassword 'mikasa'
         }
     }
     buildTypes {
